20081102 disk/{fdd.c,upd_fdc.c}: stop hang if asked for index hole when disk
         motor is off, and change spindown time so that The Running Man disk
         works (bug #2212424) (Gergely Szasz; thanks, Mark Woodmass).
20081102 ui/win32/win32ui.c: Win32: Made ui_error_specific function work
	 similarly to the gtk ui equivalent (Marek).
20081102 ui/win32/{win32ui.c,win32internals.h,win32joystick.[ch}: Win32:
	 Implemented joystick handling using mmsystem API (and tested using PPJoy
	 joystick emulator, hope it works with real hardware) (Marek).
20081108 disk/disk.c: prevent array overrun (bug #2240211) (Gergely Szasz).
20081108 disk/disk.c,fuse.c,utils.c: use libspectrum's ability to
         identify more disk image formats (patch #2233744) (Gergely Szasz).
20081109 hacking/cvs-tags: document 0.10.0 branch.
20081109 disk/disk.c: stop buffer overrun from malformed .dsk (fixes bug
	 #2248067) (Gergely Szasz).
20081116 ChangeLog,machines/{specplus2a.c,specplus3.c}: reading from the
	 AY data port on the +2A/+3 is the same as reading from the
         register port (thanks, Mark Woodmass).
20081118 rzx.c: don't autosave rzx snapshots when we are recording in compo
         mode (Fred).
20081119 disk/{disk.c,upd_fdc.c}: fix READ_DIAG emlation bugs to support
         LERM Plus-3-Mate (fixes bug #2312217) (Gergely Szasz).
20081120 compat/amiga/paths.c: implement compat_is_absolute_path for Amiga
         (final part of patch #1712260) (Chris Young).
20081120 utils.c: don't switch machine on autoloading a Timex dock cart if we
         can already support them (Fred).
20081122 disk/disk.c: fix a track length calculation bug (more of bug #2312217)
         (Gergely Szasz).
20081125 scld.c: fix loading of dock/exrom information from snapshots (Fred).
20081129 disk/disk.c: limit weak sector handling to fix Coin-Op Hits (more of
         bug #2312217) (Gergely Szasz).
20081129 disk/disk.c: one instance of plus3_fix wasn't updated (thanks, Stuart
         Brady) (Fred).