@@ -2945,3 +2945,5 @@ snapshot.c: use the fully encapsulated libspectrum_snap
          bug #2312217) (Gergely Szasz).
 20081129 disk/disk.c: one instance of plus3_fix wasn't updated (thanks, Stuart
          Brady) (Fred).
+20081202 ui/gtk/debugger.c: begin replacing the deprecated GtkCList interface
+	 with GtkTreeView/GtkTreeModel.
